--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV</title>
     <link rel="icon" href="assets/img/favicon.ico" />
-    <!-- <link rel="stylesheet" href="./style/style.css" /> -->
+    <link rel="stylesheet" href="./style/reset.css" />
+    <link rel="stylesheet" href="./scss/style1.css" />
   </head>
   <body class="wrapper">
     <header class="header">
