--- a/index.html
+++ b/index.html
@@ -6,26 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV</title>
     <link rel="icon" href="assets/img/favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style/reset.css" />
     <link rel="stylesheet" href="./scss/style1.css" />
   </head>
   <body class="wrapper">
     <header class="header">
-      <nav class="nav">
+      <nav class="nav center">
         <ul class="nav-list">
           <li class="nav-item">
             <a href="#contacts" class="nav-link">Contacts</a>
           </li>
           <li class="nav-item">
-            <a href="#summary" class="nav-link">Summary ffd</a>
+            <a href="#summary" class="nav-link">Summary</a>
           </li>
           <li class="nav-item">
             <a href="#skills" class="nav-link">Skills</a>
           </li>
+          <li class="nav-item">
+            <a href="#code" class="nav-link">Code example</a>
+          </li>
+          <li class="nav-item">
+            <a href="#experience" class="nav-link">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a href="#education" class="nav-link">Education</a>
+          </li>
+          <li class="nav-item">
+            <a href="#language" class="nav-link">Language</a>
+          </li>
         </ul>
       </nav>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <aside></aside>
+      <div></div>
+    </main>
     <footer class="footer"></footer>
   </body>
 </html>
