feat: add files webfonts and all.css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./style/all.css" />
     <link rel="stylesheet" href="./style/reset.css" />
     <link rel="stylesheet" href="./scss/style1.css" />
   </head>
@@ -43,9 +44,13 @@
         </ul>
       </nav>
     </header>
-    <main class="main">
-      <aside></aside>
-      <div></div>
+    <main class="main center">
+      <aside class="aside">
+        <img src="./assets/img/photo.jpg" alt="photo" />
+        <h1 class="name">AKSANA SIAROHINA</h1>
+        <h3 class="devel">Front-end Developer</h3>
+      </aside>
+      <div>yiuoi</div>
     </main>
     <footer class="footer"></footer>
   </body>
