feat: add contacts

--- a/index.html
+++ b/index.html
@@ -49,8 +49,40 @@
         <img src="./assets/img/photo.jpg" alt="photo" />
         <h1 class="name">AKSANA SIAROHINA</h1>
         <h3 class="devel">Front-end Developer</h3>
+        <div class="basic-info">
+          <h2 class="title">Contacts</h2>
+          <ul class="contacts">
+            <li>
+              <a href="#" style="cursor: text"
+                ><i class="fas fa-city"></i><span>Minsk</span></a
+              >
+            </li>
+            <li>
+              <a href="#" style="cursor: text"
+                ><i class="fas fa-phone-square-alt"></i
+                ><span>+375 29 762-64-63</span></a
+              >
+            </li>
+            <li>
+              <a href="#" style="cursor: text"
+                ><i class="fas fa-envelope-square"></i
+                ><span>seregina.oksana.1987@gmail.com</span></a
+              >
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/aksana-siarohina-0264a3206/"
+                ><i class="fab fa-linkedin"></i><span>LinkedIn</span></a
+              >
+            </li>
+            <li>
+              <a href="https://join.skype.com/invite/z3sI2Z945neM"
+                ><i class="fab fa-skype"></i><span>Skype</span></a
+              >
+            </li>
+          </ul>
+        </div>
       </aside>
-      <div>yiuoi</div>
+      <div class="right-content">yiuoi</div>
     </main>
     <footer class="footer"></footer>
   </body>
