feat: add skills and language

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         <h1 class="name">AKSANA SIAROHINA</h1>
         <h3 class="devel">Front-end Developer</h3>
         <div class="basic-info">
-          <h2 class="title">Contacts</h2>
+          <h2 class="title" style="transform: translate(0, -50%)" id="contacts">
+            Contacts
+          </h2>
           <ul class="contacts">
             <li>
               <a href="#" style="cursor: text"
@@ -58,13 +60,13 @@
               >
             </li>
             <li>
-              <a href="#" style="cursor: text"
+              <a href="tel:+375297626463"
                 ><i class="fas fa-phone-square-alt"></i
                 ><span>+375 29 762-64-63</span></a
               >
             </li>
             <li>
-              <a href="#" style="cursor: text"
+              <a href="mailto:seregina.oksana.1987@gmail.com"
                 ><i class="fas fa-envelope-square"></i
                 ><span>seregina.oksana.1987@gmail.com</span></a
               >
@@ -78,6 +80,25 @@
               <a href="https://join.skype.com/invite/z3sI2Z945neM"
                 ><i class="fab fa-skype"></i><span>Skype</span></a
               >
+            </li>
+          </ul>
+          <h2 class="title" id="skills">Skills</h2>
+          <ul class="list">
+            <li>HTML5, CSS3</li>
+            <li>JavaScript Basics</li>
+            <li>Responsive layout</li>
+            <li>Sass</li>
+            <li>Bootstrap</li>
+            <li>Figma, PhotoShop</li>
+            <li>Git</li>
+            <li>JSON</li>
+            <li>AJAX</li>
+          </ul>
+          <h2 class="title" id="language">Language</h2>
+          <ul class="list">
+            <li class="lang">
+              English
+              <p>Pre-Intermediate</p>
             </li>
           </ul>
         </div>
