feat: add info to right-content

--- a/index.html
+++ b/index.html
@@ -103,7 +103,101 @@
           </ul>
         </div>
       </aside>
-      <div class="right-content">yiuoi</div>
+      <div class="right-content">
+        <section class="summary" id="summary">
+          <h2 class="title-right">Summary</h2>
+          <hr />
+          <p class="description">
+            I like the front-end because this is the future. I like the visual
+            part of the work. And you can clearly see the result of your work in
+            the frontend.
+          </p>
+          <p class="description">
+            I have the ability to work in multitasking mode and high analytical
+            skills allow me to work effectively with large amounts of
+            information, quickly find high-quality solutions to complex
+            problems. I quickly find common ground with the new team.
+          </p>
+        </section>
+        <section class="experience" id="experience">
+          <h2 class="title-right">Experience</h2>
+          <hr />
+          <p class="description">
+            <span class="descr-bold">IT Academy</span>, Apprenticeship.
+          </p>
+          <p class="description">SINCE APRIL 2021</p>
+          <p class="description">Educational project: Online Watch Store.</p>
+          <p class="description">
+            It was created: Main page, Product page, Order cart, Order page.
+            Applied functionality: uploading the product information from the
+            local server, carousel(implemented with Bootstrap), adding/removing
+            an item in the cart, order form with validation, storing and
+            receiving data from LocalStorage, sending order information to a
+            local server.
+            <a href="https://github.com/OksanaSeregina/MATOA_PROJECT"
+              >MATOA_PROJECT</a
+            >
+          </p>
+        </section>
+        <section class="education" id="education">
+          <h2 class="title-right">Education</h2>
+          <hr />
+          <p class="description">
+            <span class="descr-italic"
+              >IT Academy, Web application development with JavaScript</span
+            >
+          </p>
+          <p class="description">AUGUST 2021 – NOVEMBER 2021</p>
+          <p class="description">
+            The following topics were studied on the course:
+          </p>
+          <ul class="list-descr">
+            <li>Closures</li>
+            <li>OOP. Description of the classes</li>
+            <li>Prototype inheritance</li>
+            <li>‘this’ keyword</li>
+            <li>Event loop</li>
+            <li>Events. Event handling</li>
+            <li>
+              ES6/ES7/ES8 features (let / const, arrow functions, spread (…)
+              operator, destructuring, promises, generators, class syntax, Map /
+              Set, fetch, async/await, etc.)
+            </li>
+          </ul>
+          <p class="description">
+            <a
+              href="https://github.com/OksanaSeregina/Certificates/blob/main/IT-Academy(JAVASCRIPT)_2021.pdf"
+              >Certificate</a
+            >
+          </p>
+
+          <p class="description" style="margin-top: 30px">
+            <span class="descr-italic"
+              >IT Academy, Website development with HTML, CSS</span
+            >
+          </p>
+          <p class="description">APRIL 2021 – JULY 2021</p>
+          <p class="description">
+            The following topics were studied on the course:
+          </p>
+          <ul class="list-descr">
+            <li>Learning HTML, CSS</li>
+            <li>Flexbox model</li>
+            <li>Grid model</li>
+            <li>Working with forms</li>
+            <li>Bootstrap framework</li>
+            <li>Animating elements</li>
+            <li>Media queries. Responsive layout</li>
+            <li>Hierarchical selectors. Cascading. Visibility display</li>
+          </ul>
+          <p class="description">
+            <a
+              href="https://github.com/OksanaSeregina/Certificates/blob/main/IT-Academy(HTML%2C%20CSS)_2021.pdf"
+              >Certificate</a
+            >
+          </p>
+        </section>
+      </div>
     </main>
     <footer class="footer"></footer>
   </body>
