feat: add section code example

--- a/index.html
+++ b/index.html
@@ -198,7 +198,23 @@
           </p>
         </section>
       </div>
+      <section class="code" id="code">
+        <h2 class="title-code">Code example</h2>
+        <hr />
+        <pre>
+        <code>
+  function sumTriangularNumbers(n) {
+    let sum = 0;
+    for (let i = 1; i <= n; i++) {
+      sum += (i * (i + 1)) / 2;
+    }
+    return sum;
+  }
+        </code>
+      </pre>
+      </section>
     </main>
+
     <footer class="footer"></footer>
   </body>
 </html>
