feat: add footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./scss/style1.css" />
   </head>
   <body class="wrapper">
-    <header class="header">
+    <header>
       <nav class="nav center">
         <ul class="nav-list">
           <li class="nav-item">
@@ -134,7 +134,9 @@
             an item in the cart, order form with validation, storing and
             receiving data from LocalStorage, sending order information to a
             local server.
-            <a href="https://github.com/OksanaSeregina/MATOA_PROJECT"
+            <a
+              href="https://github.com/OksanaSeregina/MATOA_PROJECT"
+              target="_blank"
               >MATOA_PROJECT</a
             >
           </p>
@@ -167,6 +169,7 @@
           <p class="description">
             <a
               href="https://github.com/OksanaSeregina/Certificates/blob/main/IT-Academy(JAVASCRIPT)_2021.pdf"
+              target="_blank"
               >Certificate</a
             >
           </p>
@@ -193,6 +196,7 @@
           <p class="description">
             <a
               href="https://github.com/OksanaSeregina/Certificates/blob/main/IT-Academy(HTML%2C%20CSS)_2021.pdf"
+              target="_blank"
               >Certificate</a
             >
           </p>
@@ -215,6 +219,23 @@
       </section>
     </main>
 
-    <footer class="footer"></footer>
+    <footer>
+      <div class="link-footer center">
+        <a
+          class="link-github"
+          href="https://github.com/OksanaSeregina"
+          target="_blank"
+          ><i class="fab fa-github"></i><span>My GitHub</span></a
+        >
+        <p class="year">2022</p>
+        <a href="https://rs.school/js/" target="_blank"
+          ><img
+            src="./assets/svg/rsschool.svg"
+            alt="logo"
+            width="150px"
+            height="50px"
+        /></a>
+      </div>
+    </footer>
   </body>
 </html>
