feat: add burger menu and responsive layout

--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
             <a href="#language" class="nav-link">Language</a>
           </li>
         </ul>
+
+        <span id="burger">
+          <i></i>
+          <i></i>
+          <i></i>
+        </span>
+        <span id="close">&#10005;</span>
       </nav>
     </header>
     <main class="main center">
@@ -85,7 +92,7 @@
           <h2 class="title" id="skills">Skills</h2>
           <ul class="list">
             <li>HTML5, CSS3</li>
-            <li>JavaScript Basics</li>
+            <li>JavaScript</li>
             <li>Responsive layout</li>
             <li>Sass</li>
             <li>Bootstrap</li>
@@ -237,5 +244,7 @@
         /></a>
       </div>
     </footer>
+
+    <script src="./js/script.js"></script>
   </body>
 </html>
