--- a/index.html
+++ b/index.html
@@ -239,8 +239,7 @@
           ><img
             src="./assets/svg/rsschool.svg"
             alt="logo"
-            width="150px"
-            height="50px"
+            style="width: 150px; height: 50px"
         /></a>
       </div>
     </footer>
