--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <code>
   function sumTriangularNumbers(n) {
     let sum = 0;
-    for (let i = 1; i <= n; i++) {
+    for (let i = 1; i &lt;= n; i++) {
       sum += (i * (i + 1)) / 2;
     }
     return sum;
